# QuadraticFormulaCalculator

QuadraticFormulaCalculator/: CMakeLists.txt
QuadraticFormulaCalculator/QuadraticFormulaCalculator/: CMakeLists.txt  QuadraticFormulaCalculator.c  QuadraticFormulaCalculator.h
